--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "tailwindcss": "^3.3.3"
   },
   "dependencies": {
+    "@parcel/runtime-react-refresh": "^2.9.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
